    * grayscale decoding/encoding with FFmpeg disabled where it slowed down
      the color case
    * Linux AppleIR remote support
    * add options to disable some or all configuration files
    * support for DOS-style file:///x:/path paths
    * some new slave commands (check DOCS/tech/slave.txt)
    * misc fixes to libass

    Ports:
    * small crash with vo_macosx fixed
    * AC3/DTS passthrough for ao_macosx
    * fix frozen OSD on Mac OS X
    * vo_gl now works with -wid and nVidia drivers on Windows (this is a hack)
    * VIDIX on SuperH.
    * workarounds for AltiVec on Apple gcc 3.3 on Mac OS X dropped

  rc2try2:

    Security:
    * buffer overflow in url.c fixed
    * buffer overflow in stream_cddb.c fixed
    * stack overflow in demuxer_audio.c fixed
    * buffer overflow in demuxer_mov.c fixed


  rc2: "AreWeThereYet?" October 7, 2007
  (SVN revisions: MPlayer r24722, FFmpeg r10677)

    DOCS:
    * console messages and XML documentation converted to UTF-8
    * Russian documentation translation finished
    * Russian man page translation finished
    * Chinese man page translation finished
    * Chinese documentation translation started
    * Documented get/set/step properties in DOCS/tech/slave.txt

    Decoders:
    * Intel Music Coder audio decoding via lavc
    * Monkey Audio audio decoding via lavc
    * Fraps v2/v4 video decoding via lavc
    * Video game codecs: 4XM audio, Electronic Arts ADPCM audio, Delphine CIN
      audio and video, Interplay DPCM audio, Sierra VMD video, Tiertex SEQ
      video, Westwood IMA ADPCM audio, XAN wc3 video, Id CIN video, Interplay
      video, XAN ADPCM audio, Westwood SND1 audio, Feeble Files DXA video, THP
      audio and video, Renderware TeXture Dictionary video, Bethesda Software
      VID video via lavc
    * video game codecs: XAN wc4 video via binary DLL
    * libmpeg2 updated to 0.4.1
    * fixed resolution switching with libmpeg2
    * handle resolution switching for Real codecs