@@ -1,7 +1,7 @@
 /*****************************************************************************
  * css.c: Functions for DVD authentication and descrambling
  *****************************************************************************
- * Copyright (C) 1999-2003 VideoLAN
+ * Copyright (C) 1999-2008 VideoLAN
  * $Id$
  *
  * Authors: Stéphane Borel <stef@via.ecp.fr>
